Add carousel and new nav

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Amazing Grace of Cape Cod - Welcome</title>
+		<title>Amazing Grace of Cape Cod</title>
 		<meta property="og:site_name" content="Amazing Grace of Cape Cod" />
 		<meta property="og:title" content="Amazing Grace of Cape Cod" />
 		<meta property="og:description" content="Amazing Grace Cape Cod. An all expenses paid summer experience for children whose parents are incarcerated.
@@ -40,7 +40,7 @@
 				<div class="container">
 					<ul>
 						<li><img class="logo" src="./resources/images/pixel.png"></li>
-						<li><a href="#">Welcome</a></li>
+						<li><a href="#">About</a></li>
 						<li><a href="#">Activities</a></li>
 						<li><a href="#">Impact</a></li>
 						<li><a href="#">Participate</a></li>
@@ -84,33 +84,9 @@
 				-->
 			
 			
-			<section class="page-content">
-				<div class="sub-section">
-					<h2>Welcome</h2>
-					<p>Amazing Grace is a cost free summer experience for children whose parent is or has been incarcerated. </p>
-					<p>It's a chance for children aged 7 (going into 2nd grade) to 11 to have fun, and to experience unconditional love.</p>
-					<p>Campers will swim, play sports, do arts and crafts, work with farm animals, try out a ropes course, hike in the woods, go boating, and much more under the supervision of trained counselors and volunteers from churches across the Cape.</p>
-					<p>At night, we will gather around a campfire to sing and hear stories.</p>
-					<p>As we work and play together, we will remember how each of us is special - treasured and beloved.</p>
-					<p>We are excited about offering this camp experience again in 2018 from August 19 – 24.</p>
-				</div>
-				<div class="sub-section">
-					<h2>Sponsors</h2>
-					<p>This is a cost-­free program for the children, subsidized entirely by donations and a generous scholarship from the South Shore YMCA to reduce our cost for each camper. Amazing Grace began in 2014 when caring individuals at Saint Mary’s Episcopal Church, Saint David’s Episcopal Church, and Southeastern Open Door Mission decided to work to break the cycle of intergenerational incarceration. It continues through the generosity of area churches, organizations, businesses, and individuals like you.
-						</p>
-				</div>
-				<div class="sub-section">
-					<h2>Amazing Grace Online and in the News</h2>
-					<ul>
-						<li><font size="3"><span style="color:rgb(51, 51, 51)">&#65279;Dr. Meghan Sullivan on "The Developmental Impact of Incarceration on Children" (Includes Amazing Grace History from Julie Lytle) &nbsp;- YouTube, click&nbsp;<a href="https://www.youtube.com/watch?v=167pACjr4FU" target="_blank">here</a>.</span></font></li>
-						<li><font size="3">Julie Lytle and Megan Sullivan talk about the impact of incarceration on children with Mindy Todd, click <a href="http://capeandislands.org/post/children-incarcerated-parents" target="_blank">here</a>.&nbsp;</font></li>
-						<li><font size="3">Cape Cod Volunteers, click <a href="http://www.capecodvolunteers.org/agency/detail/?agency_id=70928" target="_blank">here</a>. &nbsp;&nbsp;</font><font size="3">&nbsp;</font></li>
-						<li><font size="3">Alternative markets today on Cape offer chance to give back, click <a href="http://www.ack.net/news/20161113/alternative-markets-today-on-cape-offer-chance-to-give-back" target="_blank">here</a>. &nbsp;&nbsp;&nbsp;</font></li>
-						<li><font size="3">Celebrating the positive for children with a parent in prison, click <a href="http://www.capecodtimes.com/article/20140914/LIFE/140919881" target="_blank">here</a>.&nbsp;&nbsp;</font></li>
-						<li><font size="3">Amazing Grace Is... &nbsp;Cape and Islands Deanery Presentation, click <a href="http://capeislandsdeanery.org/mailings/2016-17/AmazingGrace_Presentation_2017_0315.pptx" target="_blank">here</a>. &nbsp;&nbsp;</font></li>
-						<li>&#8203;<font size="3">501(c)3 classification, click <a href="https://charitylook.org/amazing-grace-of-cape-cod-inc-364798715/" target="_blank">here</a>. &nbsp;</font></li>
-						<li><font size="3" style="color:rgb(42, 42, 42)">The camp's first season was reported by the Cape Cod Times, click&nbsp;</font><font size="3" style="color:rgb(42, 42, 42)"><a href="http://www.stdavids4222.comcastbiz.net/amazing_grace__a_camp_for_child.html">here</a>.</font></li>
-					</ul>
+			<section class="site-map">
+				<div class="container">
+					<img src="./resources/images/index_banner.jpg">
 				</div>
 			</section>
 		</main>
