--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
 		<link rel="stylesheet" type="text/css" href="./resources/css/reset.css" />
 		<link rel="stylesheet" type="text/css" href="./resources/css/style.css" />
+		<link rel="stylesheet" type="text/css" href="./resources/css/index.css" />
+
 		<link href="https://fonts.googleapis.com/css?family=Oxygen:400,700&amp;subset=latin-ext" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Merriweather:400,700&amp;subset=latin-ext" rel="stylesheet">
 		<!-- 1. Link to jQuery (1.8 or later), -->
@@ -40,13 +42,13 @@
 				<div class="container">
 					<ul>
 						
-						<li><a href="#">About</a></li>
-						<li><a href="#">Activities</a></li>
-						<li><a href="#">Impact</a></li>
-						<li><a href="#">Participate</a></li>
-						<li><a href="#">Volunteer</a></li>
-						<li><a href="#">Donate</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a href="./about.html">About</a></li>
+						<li><a href="./activities.html">Activities</a></li>
+						<li><a href="./impact.html">Impact</a></li>
+						<li><a href="./participate.html">Participate</a></li>
+						<li><a href="./volunteer.html">Volunteer</a></li>
+						<li><a href="./donate.html">Donate</a></li>
+						<li><a href="./contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</nav>
