Further layout, footer, and responsive design.

--- a/activities.html
+++ b/activities.html
@@ -102,5 +102,16 @@
             </div>
         </section>    
     </main>
+    <footer>
+        <div class="footer-text-container">
+            <div class="footer-text">
+                <address>
+                    <p>Amazing Grace of Cape Cod, Inc.</p>
+                    <p>P.O. Box 636,&nbsp;Centerville, MA &nbsp;02632</p>
+                    <p>E-mail us at <a href="mailto:amazinggracecapecod@gmail.com">amazinggracecapecod@gmail.com</a></p>
+                </address>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
