--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	</head>
 	<body>
 			<header>
-				<a href="./index.html"><img class="logo-text" src="./resources/images/logo_text.jpg"/></a>	
+				<a href="./index.html"><img class="logo-text" src="./resources/images/logo_text.png"/></a>	
 				<a href="./index.html"><img class="logo-spacer" src="./resources/images/pixel.png"/></a>
 					<nav class="desktop">
 						<ul>
@@ -105,7 +105,7 @@
 				</header>
 		<main>
 			<section class="carousel">
-
+				
 				<!-- Fotorama image carousel.  See http://fotorama.io/customize/ for options.-->
 				<div class="fotorama"
 					data-width="100%"
@@ -118,6 +118,10 @@
 					<img src="./resources/images/carousel/tent_activity.jpg">
 					<img src="./resources/images/carousel/water_trampoline.jpg">
 					<img src="./resources/images/carousel/waterfront_vests.jpg">
+				</div>
+				<div class="billboard">
+					<h1>Amazing Grace of Cape Cod</h1>
+					<h3>Nurturing positive and healthy futures for children and families impacted by incarceration</h2>
 				</div>
 			</section>
 			<!--
@@ -184,9 +188,14 @@
 			</section>
 		</main>
 		<footer>
-			<div class="footer-text">
-				<address><p>Amazing Grace of Cape Cod Inc., P.O. Box 636,&nbsp;Centerville, MA &nbsp;02632</p></address>
-				<p>E-mail us at <a href="mailto:amazinggrace.capecod@gmail.com">amazinggrace.capecod@gmail.com</a></p>
+			<div class="footer-text-container">
+				<div class="footer-text">
+					<address>
+						<p>Amazing Grace of Cape Cod, Inc.</p>
+						<p>P.O. Box 636,&nbsp;Centerville, MA &nbsp;02632</p>
+						<p>E-mail us at <a href="mailto:amazinggracecapecod@gmail.com">amazinggracecapecod@gmail.com</a></p>
+					</address>
+				</div>
 			</div>
 		</footer>
 	</body>
