All layout finished.

--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
 </head>
 <body>
     <header>
-        <a href="./index.html"><img class="logo-spacer" src="./resources/images/pixel.png"/></a>
-        <nav class="desktop">
+        <a href="./index.html"><img class="logo-text" src="./resources/images/logo_text.png"/></a>	
+		<nav class="desktop">
             <ul>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./activities.html">Activities</a></li>
@@ -80,7 +80,10 @@
         </nav>
     </header>
     <main>
-        <section class="banner" style="background-image:url(./resources/images/banner.jpg);"> 
+        <section class="banner">
+            <div class="banner-image">
+                <img src="./resources/images/banner.jpg"/>
+            </div> 
             <div class="banner-text">
                 <h2>About Amazing Grace of Cape Cod</h2>
                 <h3></h3>
@@ -121,22 +124,7 @@
                     Saint David’s Episcopal Church, and Southeastern Open Door Mission decided to work to break the cycle of intergenerational incarceration. 
                     It continues through the generosity of area churches, organizations, businesses, and individuals like you.</p>
             </div>
-            <div class="sub-section">
-                <h2> </h2>
-                <p></p>
-            </div>
-            <div class="sub-section">
-                <h2> </h2>
-                <p></p>
-            </div>
-            <div class="sub-section">
-                <h2> </h2>
-                <p></p>
-            </div>
-            <div class="sub-section">
-                <h2> </h2>
-                <p></p>
-            </div>
+            
         </section>
     </main>
     <footer>
