--- a/donate.html
+++ b/donate.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <a href="./index.html"><img class="logo-spacer" src="./resources/images/pixel.png"/></a>
+        <a href="./index.html"><img class="logo-text" src="./resources/images/logo_text.png"/></a>	
         <nav class="desktop">
             <ul>
                 <li><a href="./about.html">About</a></li>
@@ -80,10 +80,10 @@
         </nav>
     </header>
     <main>
-        <section class="banner">
+        <section class="banner"> 
             <div class="banner-image">
-                <img src="./resources/images/donate_banner.jpg"/>
-            </div>
+                <img src="./resources/images/banner.jpg"/>
+            </div> 
             <div class="banner-text">
                 <h2>Give to Amazing Grace</h2>
                 <h3>Help us to nurture positive and healthy futures</h3>
@@ -114,7 +114,7 @@
                 <h2>How Your Contribution Helps </h2>
                 <ul>
                     <li>$500 sponsors a child for a week of camp</li>
-                    <li>>$100 sponsors an activity </li>
+                    <li>$100 sponsors an activity </li>
                     <li>$50 fills a backpack with a child's camp supplies</li> 
                     <li>$25 provides a camp T-shirt</li>                   
                 </ul> 
@@ -125,7 +125,7 @@
             <div class="sub-section">
                 <h2>In-kind Donations</h2>
                 <p><a href="contact.html">Contact us</a> to inquire about making an in-kind donation.</p>
-                <p>Consider <a href="volunteer.html"volunteering</a> to help us prepare for the August camp program, or to work with our amazing kids. </p> 
+                <p>Consider <a href="volunteer.html">volunteering</a> to help us prepare for the August camp program, or to work with our amazing kids. </p> 
             </div>
         </section>
     </main>
