--- a/forms.html
+++ b/forms.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <a href="./index.html"><img class="logo-spacer" src="./resources/images/pixel.png"/></a>
+        <a href="./index.html"><img class="logo-text" src="./resources/images/logo_text.png"/></a>	
         <nav class="desktop">
             <ul>
                 <li><a href="./about.html">About</a></li>
@@ -80,8 +80,13 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h2>Forms</h2>
+        <section class="banner">
+            <div class="banner-image">
+                <img src="./resources/images/banner.jpg"/>
+            </div>  
+            <div class="banner-text">
+                <h2>Forms</h2>
+            </div>
         </section>
     </main>
     <footer>
