--- a/activities.html
+++ b/activities.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <a href="./index.html"><img class="logo-spacer" src="./resources/images/pixel.png"/></a>
+        <a href="./index.html"><img class="logo-text" src="./resources/images/logo_text.png"/></a>	
         <nav class="desktop">
             <ul>
                 <li><a href="./about.html">About</a></li>
@@ -80,20 +80,24 @@
         </nav>
     </header>
     <main>
-        <section class="banner">
+        <section class="banner"> 
             <div class="banner-image">
-                <img src="./resources/images/"/>
-            </div>
+                <img src="./resources/images/banner.jpg"/>
+            </div> 
             <div class="banner-text">
-                <h2></h2>
+                <h2>Activities</h2>
                 <h3></h3>
             </div>
         </section>
         <section class="page-content">
             <div class="sub-section">
                 <h2>Upcoming Events</h2>
-                <iframe src="https://calendar.google.com/calendar/embed?showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23fdfe98&amp;src=g30uc7r2nslr6q1qpluhhdlq8k%40group.calendar.google.com&amp;color=%235F6B02&amp;ctz=America%2FNew_York" style="border-width:0" width="800" height="600" frameborder="0" scrolling="yes">
-                </iframe>
+                <div class="iframe-container-container">
+                    <div class="iframe-container">
+                        <iframe src="https://calendar.google.com/calendar/embed?showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23fdfe98&amp;src=g30uc7r2nslr6q1qpluhhdlq8k%40group.calendar.google.com&amp;color=%235F6B02&amp;ctz=America%2FNew_York" style="border-width:0" frameborder="0" scrolling="yes">
+                        </iframe>
+                    </div>
+                </div>
                 
             </div>
             <div class="sub-section">
