--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <a href="./index.html"><img class="logo-spacer" src="./resources/images/pixel.png"/></a>
+        <a href="./index.html"><img class="logo-text" src="./resources/images/logo_text.png"/></a>	
         <nav class="desktop">
             <ul>
                 <li><a href="./about.html">About</a></li>
@@ -80,10 +80,10 @@
         </nav>
     </header>
     <main>
-        <section class="banner">
+        <section class="banner"> 
             <div class="banner-image">
-                <img src="./resources/images/donate_banner.jpg"/>
-            </div>
+                <img src="./resources/images/banner.jpg"/>
+            </div> 
             <div class="banner-text">
                 <h2>Contact Us</h2>
                 <h3></h3>
