--- a/volunteer.html
+++ b/volunteer.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <a href="./index.html"><img class="logo-spacer" src="./resources/images/pixel.png"/></a>
+        <a href="./index.html"><img class="logo-text" src="./resources/images/logo_text.png"/></a>	
         <nav class="desktop">
             <ul>
                 <li><a href="./about.html">About</a></li>
@@ -83,7 +83,8 @@
         <section class="banner">
             <div class="banner-image">
                 <img src="./resources/images/banner.jpg"/>
-            </div>
+            </div>  
+        
             <div class="banner-text">
                 <h2>Volunteer</h2>
                 <h3>Help Amazing Grace succeed</h3>
