Final layout touches

--- a/about.html
+++ b/about.html
@@ -29,7 +29,9 @@
                 <li><a href="./participate.html">Participate</a></li>
                 <li><a href="./volunteer.html">Volunteer</a></li>
                 <li><a href="./donate.html">Donate</a></li>
+                <li><a href="./forms.html">Forms</a></li>
                 <li><a href="./contact.html">Contact</a></li>
+                
             </ul>
             
         </nav>
@@ -53,6 +55,7 @@
                             <a href="./participate.html">Participate</a>
                             <a href="./volunteer.html">Volunteer</a>
                             <a href="./donate.html">Donate</a>
+                            <a href="./forms.html">Forms</a>
                         </div>
                     </div>
                 </li>
@@ -71,6 +74,7 @@
                             <a href="./participate.html">Participate</a>
                             <a href="./volunteer.html">Volunteer</a>
                             <a href="./donate.html">Donate</a>
+                            <a href="./forms.html">Forms</a>
                             <a href="./contact.html">Contact</a>
                         </div>
                     </div>
