--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 										<a href="./participate.html">Participate</a>
 										<a href="./volunteer.html">Volunteer</a>
 										<a href="./donate.html">Donate</a>
+										<a href="./forms.html">Forms</a>
 									</div>
 								</div>
 							</li>
@@ -95,6 +96,7 @@
 										<a href="./participate.html">Participate</a>
 										<a href="./volunteer.html">Volunteer</a>
 										<a href="./donate.html">Donate</a>
+										<a href="./forms.html">Forms</a>
 										<a href="./contact.html">Contact</a>
 									</div>
 								</div>
@@ -142,7 +144,7 @@
 				<div class="gallery">
 					<a href="about.html">
 					<div class="page-launcher">
-						<img src="./resources/images/default.jpg" alt="">
+						<img src="./resources/images/page-launchers/about.jpg" alt="">
 					  	<div class="caption">
 							<h2>About</h2>
 							<p>Who we are and what we do</p>
@@ -151,7 +153,7 @@
 					</a>
 					<a href="activities.html">
 					<div class="page-launcher">
-						<img src="./resources/images/default.jpg" alt="">
+						<img src="./resources/images/page-launchers/activities.jpg" alt="">
 					  	<div class="caption">
 							<h2>Activities</h2>
 							<p>What we've been up to</p>
@@ -160,7 +162,7 @@
 					</a>
 					<a href="impact.html">
 					<div class="page-launcher">
-						<img src="./resources/images/default.jpg" alt="">
+						<img src="./resources/images/page-launchers/impact.jpg" alt="">
 					  	<div class="caption">
 							<h2>Impact</h2>
 							<p>See how we've made a difference</p>
@@ -169,7 +171,7 @@
 					</a>
 					<a href="participate.html">
 					<div class="page-launcher">
-						<img src="./resources/images/default.jpg" alt="">
+						<img src="./resources/images/page-launchers/participate.jpg" alt="">
 					  	<div class="caption">
 							<h2>Participate</h2>
 							<p>Sign up or get more information</p>
@@ -178,7 +180,7 @@
 					</a>
 					<a href="volunteer.html">
 					<div class="page-launcher">
-						<img src="./resources/images/default.jpg" alt="">
+						<img src="./resources/images/page-launchers/volunteer.jpg" alt="">
 					  	<div class="caption">
 							<h2>Volunteer</h2>
 							<p>Get involved</p>
@@ -187,7 +189,7 @@
 					</a>
 					<a href="donate.html">
 					<div class="page-launcher">
-						<img src="./resources/images/default.jpg" alt="">
+						<img src="./resources/images/page-launchers/donate.jpg" alt="">
 					  	<div class="caption">
 							<h2>Donate</h2>
 							<p>Give to Amazing Grace</p>
@@ -196,7 +198,7 @@
 					</a>
 					<a href="forms.html">
 					<div class="page-launcher">
-						<img src="./resources/images/default.jpg" alt="">
+						<img src="./resources/images/page-launchers/forms.jpg" alt="">
 					  	<div class="caption">
 							<h2>Forms</h2>
 							<p>Camper applications, volunteer applications, etc.</p>
@@ -205,7 +207,7 @@
 					</a>
 					<a href="contact.html">
 					<div class="page-launcher">
-						<img src="./resources/images/default.jpg" alt="">
+						<img src="./resources/images/page-launchers/contact.jpg" alt="">
 					  	<div class="caption">
 							<h2>Contact</h2>
 							<p>Get in touch</p>
