--- a/volunteer.html
+++ b/volunteer.html
@@ -116,7 +116,8 @@
             </div>
             <div class="sub-section">
                 <h2>Inquire about volunteering</h2>
-                <p>Interested in learning more before you volunteer?  <a href="contact.html">Contact us</a>, or fill out our online form, 
+                <p>Interested in learning more before you volunteer?  <a href="contact.html">Contact us</a>, or fill out our 
+                    <a href="https://goo.gl/forms/UQdqJWeXM7Nvspos2"> online form</a>, 
                     and we will contact you to talk more about how you might get involved.</p>
             </div>
         </section>
