Update volunteer page and forms

--- a/participate.html
+++ b/participate.html
@@ -100,12 +100,13 @@
             </div>
             <div class="sub-section">
                 <h2>Camper application</h2>
-                <p>Ready to apply?  You can print the entire application, fill it out, and mail it to</p>
+                <p>Ready to apply? </p> 
+                <p><a href="./resources/pdfs/AmazingGrace_FullApplication.pdf">Download the Amazing Grace camper application.</a></p>
+                <p>You can print the entire application, fill it out, and mail it to</p>
                 <p>Amazing Grace of Cape Cod Inc.<br/>
                     P.O. Box 636<br/>
                     Centerville, MA 02632 </p>
                 <p>If you need help filling out our application, please <a href="contact.html">contact us</a></p>
-                <p><a href="./resources/pdfs/AmazingGrace_FullApplication.pdf">Download the Amazing Grace camper application.</a></p>
                 <p>(You will need <a href="https://get.adobe.com/reader/">Adobe Reader</a> to view and print the application.)</p>
             </div>
             
