--- a/volunteer.html
+++ b/volunteer.html
@@ -96,29 +96,93 @@
         <section class="page-content">
             <div class="sub-section">
                 <h2>Volunteering</h2>
-                <p>It takes a community to create and offer a camp experience. Whether you have an hour, a day, or a week, there are many ways you can share your gifts and passions.</p>
+                <p>It takes a community to create and offer a camp experience. Whether you have an hour, a day, or a week, 
+                    there are many ways you can share your gifts and passions.  We need volunteers to work with children at 
+                    the week of camp and at our monthly activities, and we also need volunteers to help us create programming, 
+                    promote our work, and oversee administrative tasks.</p>
             </div>
-            <div class="sub-section">
-                <h2>Volunteer levels</h2>
-                <p>MENTORS are needed to invest a significant amount of time during the week of camp.  Mentors will support the YMCA counselors, 
-                    lead some activities, teach songs, "hang out" with the children during the day and through the night in blocks of time.  
-                    Mentors will also help maintain contact with the children following camp and throughout the school year.  </p>
-                <p>Other volunteers are needed to complete administrative tasks and gather needed resources prior to camp week.</p>
-            </div>
-            <div class="sub-section">
-                <h2>Volunteer gatherings</h2>
-                <p>There will be a series of gatherings in June and July for mentors to get to know each other, learn camp songs, 
-                    and receive specific training.</p>
+            <div class="sub-section volunteer-jobs">
+                <h2>Volunteer opportunities</h2>
+                <ul>
+                    <li>
+                        <p><strong>Camp Mentor:</strong> Interact with our amazing kids during morning, afternoon, or overnight shifts 
+                            the week of camp. </p>
+                    </li>
+                    <li>
+                        <p><strong>Camp Specialist:</strong> Offer 1-3 hours during the week of camp, sharing a skill or talent.</p>
+                    </li>
+                    <li>
+                        <p><strong> Activity Volunteer:</strong> Interact with our amazing kids at school-year activities and events.
+                            </p>
+                    </li>
+                    <li>
+                        <p><strong>Program Developer:</strong> Help us find and create fun things for our Amazing Grace kids to do at camp and/or 
+                            at monthly gatherings. </p>
+                    </li>
+                    <li>
+                        <p><strong>Amazing Grace Story-Teller:</strong> Help us spread the word about Amazing Grace and its work. </p>
+                    </li>
+                    <li>
+                        <p><strong>Recruiter:</strong> Help us find kids to join our program, and help us find volunteers to support our work.</p>
+                    </li>
+                    <li>
+                        <p><strong>Fundraiser:</strong> Help us find financial support to do our work.</p>
+                    </li>
+                    <li>
+                        <p><strong>Implementer:</strong> Help us with behind-the-scenes support.</p>
+                    </li>
+                </ul>
             </div>
             <div class="sub-section">
                 <h2>Download the application</h2>
-                <p>The volunteer application will be available here at a later date.</p>
+                <p><a href="./resources/pdfs/AmazingGrace_VolunteerApplication.pdf">Download the Amazing Grace volunteer application.</a>
+                    (You will need <a href="https://get.adobe.com/reader/">Adobe Reader</a> to view and print the application.)</p>
+                <p>Print the application, fill it out, and mail it to</p>
+                <p>Amazing Grace of Cape Cod Inc.<br/>
+                    P.O. Box 636<br/>
+                    Centerville, MA 02632 </p>
             </div>
             <div class="sub-section">
                 <h2>Inquire about volunteering</h2>
-                <p>Interested in learning more before you volunteer?  <a href="contact.html">Contact us</a>, or fill out our 
-                    <a href="https://goo.gl/forms/UQdqJWeXM7Nvspos2"> online form</a>, 
-                    and we will contact you to talk more about how you might get involved.</p>
+                <p>Interested in learning more before you volunteer?  <a href="contact.html">Contact us</a>, or fill out our  
+                    <a href="https://goo.gl/forms/UQdqJWeXM7Nvspos2">online volunteer inquiry form</a>, 
+                    and we will contact you to talk more about how you might get involved.
+                    You can also print and mail a <a href="./resources/pdfs/AmazingGrace_volunteer_inquiry.pdf">paper volunteer inquiry form</a>.</p>
+            </div>
+            <div class="sub-section">
+                <h2>More about volunteering at camp</h2>
+                <p>We will do our best to match your preferences with the scheduling needs of our children.  Our camp director 
+                    will arrange an interview with each first-time volunteer. </p>
+                <p>Camp volunteers (mentors and specialists) work directly with our amazing kids, and have a significant 
+                    impact on the quality of our programs.  We hold our camp volunteers to some high expectations, including the following:</p>
+                <ul>
+                    <li>
+                        <p>Commitment to our <a href="./resources/pdfs/AmazingGrace_VolunteerCovenant.pdf">volunteer covenant</a>.</p>
+                    </li>
+                    <li>
+                        <p>Background checks:</p>
+                        <ul>
+                            <li><p>Criminal offender Criminal Offender Record Information (CORI) and</p></li> 
+                            <li><p>Sex Offender Record Information (SORI).</p></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <p>Complete a set of modules from Expert Online Training about working with children at camp and 
+                            maintaining a safe environment for the campers. 
+                            Log-in information will be sent after your volunteer application has been accepted.</p>
+                    </li>
+                    <li><p>Attending volunteer training events:</p></li>
+                        <ul>
+                           <li><p><strong>All volunteers: Volunteer Q&amp;A and forum: “Incarceration and Its Impact on Families, Society, and Us”</strong>, 
+                               Tuesday, June 12, 7-8:30 pm at Sturgis Charter School East Campus, 427 Main St, Hyannis.</p></li>
+                            <li><p><strong>Mandatory for all camp volunteers: Policies, Procedures, and Practices Training</strong> followed by dinner for 
+                                all who will be working onsite at Camp Burgess.   Saturday, August 18, 1-8:00 pm;  
+                                Volunteers are  encouraged to spend the Saturday night at Base Camp and help prepare everything for camp on 
+                                Sunday, August 19, 9 am–noon. </p></li> 
+                            <li><p><strong> for all camp volunteers: Meet the Campers and their Caregivers.</strong> 
+                                Volunteers are asked to be present on Sunday, August 19, noon-3pm to start tent identity activities. </p></li>
+                        </ul>
+                </ul>
             </div>
         </section>
     </main>
