--- a/volunteer.html
+++ b/volunteer.html
@@ -179,7 +179,7 @@
                                 all who will be working onsite at Camp Burgess.   Saturday, August 18, 1-8:00 pm;  
                                 Volunteers are  encouraged to spend the Saturday night at Base Camp and help prepare everything for camp on 
                                 Sunday, August 19, 9 am–noon. </p></li> 
-                            <li><p><strong> for all camp volunteers: Meet the Campers and their Caregivers.</strong> 
+                            <li><p><strong>Mandatory for all camp volunteers: Meet the Campers and their Caregivers.</strong> 
                                 Volunteers are asked to be present on Sunday, August 19, noon-3pm to start tent identity activities. </p></li>
                         </ul>
                 </ul>
