Update forms page

--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="./resources/css/menu.css" />
     <link rel="stylesheet" type="text/css" href="./resources/css/tablet.css" />
     <link rel="stylesheet" type="text/css" href="./resources/css/mobile.css" />
+    <link rel="stylesheet" type="text/css" href="./resources/css/contact.css" />
 
     <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700&amp;subset=latin-ext" rel="stylesheet">
     
@@ -98,8 +99,12 @@
                 <p>E-mail us at <a href="mailto:amazinggrace.capecod@gmail.com">amazinggrace.capecod@gmail.com</a></p>
             </div>
             <div class="sub-section">
-                <h2>Mailing Address</h2>
+                <h2>Mailing address</h2>
                 <address><p>Amazing Grace of Cape Cod Inc., P.O. Box 636,&nbsp;Centerville, MA &nbsp;02632</p></address>
+            </div>
+            <div class="sub-section">
+                <h2>Send us a message right now</h2>
+                <p><a href="https://goo.gl/forms/FZBULNh9GIEa6Jfr2">Click here to send us a message through our online form.</a></p>
             </div>
         </section>
     </main>
