--- a/volunteer.html
+++ b/volunteer.html
@@ -183,6 +183,7 @@
                                 Volunteers are asked to be present on Sunday, August 19, noon-3pm to start tent identity activities. </p></li>
                         </ul>
                 </ul>
+                <p>For more details view the <a href="./resources/pdfs/AG_CampMentor_Job Description.pdf">Camp Mentor job description</a>.</p>
             </div>
         </section>
     </main>
