--- a/forms.html
+++ b/forms.html
@@ -91,6 +91,31 @@
                 <h2>Forms</h2>
             </div>
         </section>
+        <section class="page-content">
+            <div class="sub-section">
+                <h2>Online forms</h2>
+                <p><a href="https://goo.gl/forms/FZBULNh9GIEa6Jfr2">General contact form</a></p>
+                <p><a href="https://goo.gl/forms/ILHJ5h75zVBtd8ZA2">Camper inquiry form</a></p>
+                <p><a href="https://goo.gl/forms/UQdqJWeXM7Nvspos2">Volunteer inquiry form</a></p>
+                <h4>Donate online using Paypal</h4>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="paypal">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="3YQNM4VPXRRRY">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                </form>
+            </div>
+            <div class="sub-section">
+                <h2>Printable forms</h2>
+                <p><a href="./resources/pdfs/AmazingGrace_FullApplication.pdf">Camper application</a></p>
+                <p><a href="./resources/pdfs/AmazingGrace_camper_inquiry.pdf">Camper inquiry form</a></p>
+                <p><a href="./resources/pdfs/AmazingGrace_VolunteerApplication.pdf">Volunteer application </a></p>
+                <p><a href="./resources/pdfs/AmazingGrace_volunteer_inquiry.pdf">Volunteer inquiry form </a></p>
+                <p><a href="./resources/pdfs/AmazingGrace_VolunteerCovenant.pdf">Volunteer covenant</a></p>
+                <p><a href="./resources/pdfs/AG_CampMentor_Job Description.pdf">Camp mentor job description</a></p>
+                <p><a href="./resources/pdfs/AmazingGrace_donor_form.pdf">Donation form</a></p>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="footer-text-container">
