--- a/volunteer.html
+++ b/volunteer.html
@@ -90,13 +90,13 @@
         
             <div class="banner-text">
                 <h2>Volunteer</h2>
-                <h3>Help Amazing Grace succeed</h3>
+                
             </div>
         </section>
         <section class="page-content">
             <div class="sub-section">
                 <h2>Volunteering</h2>
-                <p>It takes a community to create and offer a camp experience. Whether you have an hour, a day, or a week, 
+                <p>It takes a community to create and offer a camp experience and a year-round program. Whether you have an hour, a day, or a week, 
                     there are many ways you can share your gifts and passions.  We need volunteers to work with children at 
                     the week of camp and at our monthly activities, and we also need volunteers to help us create programming, 
                     promote our work, and oversee administrative tasks.</p>
