Update forum details.

--- a/volunteer.html
+++ b/volunteer.html
@@ -174,7 +174,8 @@
                     <li><p>Attending volunteer training events:</p></li>
                         <ul>
                            <li><p><strong>All volunteers: Volunteer Q&amp;A and forum: “Incarceration and Its Impact on Families, Society, and Us”</strong>, 
-                               Wednesday, June 27, 7-8:30 pm location TBA.</p></li>
+                               Wednesday, June 27, 7-8:30 pm at Sturgis Charter School, <i>West</i> campus, 150 West Main St., Hyannis. 
+                               <strong>(Note change in date and location from previous announcement.)</strong></p></li>
                             <li><p><strong>Mandatory for all camp volunteers: Policies, Procedures, and Practices Training</strong> followed by dinner for 
                                 all who will be working onsite at Camp Burgess.   Saturday, August 18, 1-8:00 pm;  
                                 Volunteers are  encouraged to spend the Saturday night at Base Camp and help prepare everything for camp on 
