--- a/donate.html
+++ b/donate.html
@@ -94,7 +94,7 @@
         </section>
         <section class="page-content">
             <div class="sub-section">
-                <h2>Ways to Give to Amazing Grace</h2>
+                <h2>Ways to give to Amazing Grace</h2>
                 <div class="paypal-donate">
                     <h4>Donate online using Paypal</h4>
                     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="paypal">
@@ -114,19 +114,21 @@
                 </div>
             </div>
             <div class="sub-section">
-                <h2>How Your Contribution Helps </h2>
+                <h2>How your contribution helps</h2>
                 <ul>
-                    <li>$500 sponsors a child for a week of camp</li>
-                    <li>$100 sponsors an activity </li>
-                    <li>$50 fills a backpack with a child's camp supplies</li> 
-                    <li>$25 provides a camp T-shirt</li>                   
+                    <li>$500 sponsors an Amazing Grace Camper (7-11 years old at Camp Burgess).</li>
+                    <li>$900 sponsors an AGII Camper (12+ at Camp Hayward).</li>
+                    <li>$100 provides a backpack filled with school supplies. </li>
+                    <li>$50 provides a sleeping bag.</li>
+                    <li>$25 provides an embroidered Amazing Grace shirt.</li> 
+                    <li>$10 provides a beach towel.</li>                   
                 </ul> 
                 <p>All of our programs are offered at no cost to the children participating, and are funded completely by donations and grants.  
                     Your generous support will help us to continue nurturing positive futures for these children.</p>
                 <p>Amazing Grace of Cape Cod, Inc. is a 501(c)(3) organization and all contributions are tax deductible.</p>
             </div>
             <div class="sub-section">
-                <h2>In-kind Donations</h2>
+                <h2>In-kind donations</h2>
                 <p><a href="contact.html">Contact us</a> to inquire about making an in-kind donation.</p>
                 <p>Consider <a href="volunteer.html">volunteering</a> to help us prepare for the August camp program, or to work with our amazing kids. </p> 
             </div>
