--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 		<link rel="stylesheet" type="text/css" href="./resources/css/index.css" />
 		<link rel="stylesheet" type="text/css" href="./resources/css/menu.css" />
    	 	<link rel="stylesheet" type="text/css" href="./resources/css/tablet.css" />
-    	<link rel="stylesheet" type="text/css" href="./resources/css/mobile.css" />
+		<link rel="stylesheet" type="text/css" href="./resources/css/mobile.css" />
+		<link rel="stylesheet" type="text/css" href="./resources/css/job.css" />
 
 		<script src="./resources/scripts/menu.js"></script>
 		
@@ -138,8 +139,12 @@
 					</form>
 				</div>
 				-->
-			
-			
+			<!--Job posting 7.29.18.  Remove after position is filled.-->
+			<section class="job-teaser">
+				<h3>Amazing Grace is hiring a Camp Director/Program Coordinator</h3>
+				<h4>Interested in working part time for Amazing Grace of Cape Cod? 
+					<a href="employment.html">Learn more by clicking here.</a></h4>
+			</section>
 			<section class="site-map">
 				<div class="gallery">
 					<a href="about.html">
