remove job posting

--- a/employment.html
+++ b/employment.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="./resources/css/menu.css" />
     <link rel="stylesheet" type="text/css" href="./resources/css/tablet.css" />
     <link rel="stylesheet" type="text/css" href="./resources/css/mobile.css" />
+    <link rel="stylesheet" type="text/css" href="./resources/css/job.css" />
 
     <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700&amp;subset=latin-ext" rel="stylesheet">
     
@@ -87,15 +88,15 @@
         <section class="page-content">
             <div class="sub-section">
                 <h2>News Release</h2>
-                <h3>Centerville, MA, 27 July 2018</h3>
+                <h3>Centerville, MA, 10 December 2018</h3>
                 <p>The Amazing Grace of Cape Cod Inc. Board of Directors is seeking an energetic, creative and organized individual to serve as its part-time Camp Director/Program Coordinator.  This 12-month position coordinates monthly activities during the academic year and a one-week residential camp experience in August for children with an incarcerated family member. The position requires more effort May through August and less the rest of the year for an average of 60 hours per month. Compensation is $1,000/month for a total of $12,000/year. </p>
-                <p>The ideal candidate will be available to shadow Julie Lytle, the current camp director/program coordinator and participate in some of this year's camp experience, August 18-24, at Camp Burgess in Sandwich. Julie will continue to work with the board to oversee Amazing Grace.</p>
                 <p>Applicants should send a cover letter describing why you are interested in the position and your qualifications for the position along with a resume and three references to Amazing Grace of Cape Cod Inc, P. O. Box 636, Centerville MA 02632 or 
-                    <a href="mailto:amazinggracecapecod@gmail.com">amazinggracecapecod@gmail.com.</a>
+                    <a target="_blank" href="mailto:amazinggracecapecod@gmail.com">amazinggracecapecod@gmail.com.</a>
                 </p>
-                <p>Applications may also be submitted online via <a href="https://goo.gl/forms/xIFApFAUG4cAYtLz1">this form</a>.</p>
+                <p>Applications may also be submitted online:</p>
+                <a class="job-button" target="_blank" href="https://goo.gl/forms/xIFApFAUG4cAYtLz1"><h2>Apply now</h2></a>
                 <p>A job description for the Camp Director/Program Coordinator can be 
-                    <a href="resources/pdfs/AmazingGrace_Director-Coordinator_Description.pdf">viewed here</a> (pdf format). 
+                    <a target="_blank" href="resources/pdfs/AmazingGrace_Director-Coordinator_Description.pdf">viewed here</a> (pdf format). 
                 </p>
                 <p>Applications will be accepted until the position is filled.</p>
                 
