Make forms open in new tab.

--- a/forms.html
+++ b/forms.html
@@ -94,9 +94,9 @@
         <section class="page-content">
             <div class="sub-section">
                 <h2>Online forms</h2>
-                <p><a href="https://goo.gl/forms/FZBULNh9GIEa6Jfr2">General contact form</a></p>
-                <p><a href="https://goo.gl/forms/ILHJ5h75zVBtd8ZA2">Camper inquiry form</a></p>
-                <p><a href="https://goo.gl/forms/UQdqJWeXM7Nvspos2">Volunteer inquiry form</a></p>
+                <p><a href="https://goo.gl/forms/FZBULNh9GIEa6Jfr2" target="_blank">General contact form</a></p>
+                <p><a href="https://goo.gl/forms/ILHJ5h75zVBtd8ZA2" target="_blank">Camper inquiry form</a></p>
+                <p><a href="https://goo.gl/forms/UQdqJWeXM7Nvspos2" target="_blank">Volunteer inquiry form</a></p>
                 <h4>Donate online using Paypal</h4>
                 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="paypal">
                     <input type="hidden" name="cmd" value="_s-xclick">
@@ -107,13 +107,13 @@
             </div>
             <div class="sub-section">
                 <h2>Printable forms</h2>
-                <p><a href="./resources/pdfs/AmazingGrace_FullApplication.pdf">Camper application</a></p>
-                <p><a href="./resources/pdfs/AmazingGrace_camper_inquiry.pdf">Camper inquiry form</a></p>
-                <p><a href="./resources/pdfs/AmazingGrace_VolunteerApplication.pdf">Volunteer application </a></p>
-                <p><a href="./resources/pdfs/AmazingGrace_volunteer_inquiry.pdf">Volunteer inquiry form </a></p>
-                <p><a href="./resources/pdfs/AmazingGrace_VolunteerCovenant.pdf">Volunteer covenant</a></p>
-                <p><a href="./resources/pdfs/AG_CampMentor_Job Description.pdf">Camp mentor job description</a></p>
-                <p><a href="./resources/pdfs/AmazingGrace_donor_form.pdf">Donation form</a></p>
+                <p><a href="./resources/pdfs/AmazingGrace_FullApplication.pdf" target="_blank">Camper application</a></p>
+                <p><a href="./resources/pdfs/AmazingGrace_camper_inquiry.pdf" target="_blank">Camper inquiry form</a></p>
+                <p><a href="./resources/pdfs/AmazingGrace_VolunteerApplication.pdf" target="_blank">Volunteer application </a></p>
+                <p><a href="./resources/pdfs/AmazingGrace_volunteer_inquiry.pdf" target="_blank">Volunteer inquiry form </a></p>
+                <p><a href="./resources/pdfs/AmazingGrace_VolunteerCovenant.pdf" target="_blank">Volunteer covenant</a></p>
+                <p><a href="./resources/pdfs/AG_CampMentor_Job Description.pdf" target="_blank">Camp mentor job description</a></p>
+                <p><a href="./resources/pdfs/AmazingGrace_donor_form.pdf" target="_blank">Donation form</a></p>
             </div>
         </section>
     </main>
