--- a/participate.html
+++ b/participate.html
@@ -97,20 +97,20 @@
                 <h2>Inquire about becoming a camper</h2>
                 <p>Any child, ages 7-11 years at the time of the annual camp experience, who has been impacted 
                     by a family member’s incarceration, is eligible. Fill in our 
-                    <a href="https://goo.gl/forms/ILHJ5h75zVBtd8ZA2">online form</a>, 
+                    <a href="https://goo.gl/forms/ILHJ5h75zVBtd8ZA2" target="_blank">online form</a>, 
                     and we will contact you to answer your questions and help you get started in participating in our programs.</p>
-                <p>Or, print and mail an <a href="./resources/pdfs/AmazingGrace_camper_inquiry.pdf">inquiry form</a>.</p>
+                <p>Or, print and mail an <a href="./resources/pdfs/AmazingGrace_camper_inquiry.pdf" target="_blank">inquiry form</a>.</p>
             </div>
             <div class="sub-section">
                 <h2>Camper application</h2>
                 <p>Ready to apply? </p> 
-                <p><a href="./resources/pdfs/AmazingGrace_FullApplication.pdf">Download the Amazing Grace camper application.</a></p>
+                <p><a href="./resources/pdfs/AmazingGrace_FullApplication.pdf" target="_blank">Download the Amazing Grace camper application.</a></p>
                 <p>You can print the entire application, fill it out, and mail it to</p>
                 <p>Amazing Grace of Cape Cod Inc.<br/>
                     P.O. Box 636<br/>
                     Centerville, MA 02632 </p>
                 <p>If you need help filling out our application, please <a href="contact.html">contact us</a></p>
-                <p>(You will need <a href="https://get.adobe.com/reader/">Adobe Reader</a> to view and print the application.)</p>
+                <p>(You will need <a href="https://get.adobe.com/reader/" target="_blank">Adobe Reader</a> to view and print the application.)</p>
             </div>
             
             
