--- a/donate.html
+++ b/donate.html
@@ -106,7 +106,7 @@
                     <br/>
                 </div>
                 <div class="paper-donate">
-                    <h4><a href="#">Download and print a form to mail in.</a></h4>
+                    <h4><a href="resources/pdfs/AmazingGrace_donor_form.pdf" target="_blank">Download and print a form to mail in.</a></h4>
                     <p>Send contributions made out to Amazing Grace of Cape Cod Inc.</p>
                     <p>Amazing Grace of Cape Cod Inc.<br/>
                        P.O. Box 636<br/>
