Update volunteer page

--- a/volunteer.html
+++ b/volunteer.html
@@ -169,16 +169,18 @@
                     <li>
                         <p>Complete a set of modules from Expert Online Training about working with children at camp and 
                             maintaining a safe environment for the campers. 
-                            Log-in information will be sent after your volunteer application has been accepted.</p>
+                            Log-in information will be sent after your volunteer application has been accepted, and you have until the end of July to complete them.</p>
                     </li>
                     <li><p>Attending volunteer training events:</p></li>
                         <ul>
+                            <li><p><strong>Volunteer Q&amp;A and forum: “Incarceration and Its Impact on Families, Society, and Us,” </strong> planned for an evening 
+                                in <strong>June.</strong>  The details will be firmed up by early May.</p></li>
                             <li><p><strong>Mandatory for all camp volunteers: Policies, Procedures, and Practices Training</strong> followed by dinner for 
-                                all who will be working onsite at Camp Burgess.   Saturday, August 17, 1:00-8:30 pm;  
+                                all who will be working onsite at Camp Burgess. <strong>Saturday, August 17, 1:00-6:30 pm; </strong>  
                                 Volunteers are  encouraged to spend the Saturday night at Base Camp and help prepare everything for camp on 
                                 Sunday, August 18, 9 am–noon. </p></li> 
-                            <li><p><strong>Mandatory for all camp volunteers: Meet the Campers and their Caregivers.</strong> 
-                                Volunteers are asked to be present on Sunday, August 18, noon-3pm to start tent identity activities. </p></li>
+                            <li><p><strong>All camp volunteers: Meet the Campers and their Caregivers.</strong> 
+                                Volunteers are asked to be present on <strong> Sunday, August 18, 1:00-3:00pm </strong> to start tent identity activities. </p></li>
                         </ul>
                 </ul>
                 <p>For more details view the <a href="./resources/pdfs/AG_CampMentor_Job Description.pdf">Camp Mentor job description</a>.</p>
