--- a/participate.html
+++ b/participate.html
@@ -104,7 +104,7 @@
             <div class="sub-section">
                 <h2>Camper application</h2>
                 <p>Ready to apply? </p> 
-                <p><a href="./resources/pdfs/AmazingGrace_FullApplication.pdf" target="_blank">Download the Amazing Grace camper application.</a></p>
+                <p><a href="./resources/pdfs/AmazingGrace_FullApplication.pdf" target="_blank">Download the 2019 Amazing Grace camper application.</a></p>
                 <p>You can print the entire application, fill it out, and mail it to</p>
                 <p>Amazing Grace of Cape Cod Inc.<br/>
                     P.O. Box 636<br/>
@@ -116,7 +116,7 @@
             
             <div class="sub-section">
                 <h2>Date</h2>
-                <p>Amazing Grace's 2019 camp runs from Sunday, August 18, 2018 to Friday, August 23, 2018.</p>
+                <p>Amazing Grace's 2019 camp runs from Sunday, August 18, 2019 to Friday, August 23, 2019.</p>
             </div>
             <div class="sub-section">
                 <h2>Location</h2>
