--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 					<h1>Amazing Grace of Cape Cod</h1>
 					<h3>Nurturing positive and healthy futures for children and families impacted by incarceration</h2>
 				</div>
+				
 			</section>
 			<!--
 				<div class="donate">
@@ -141,6 +142,15 @@
 				-->
 			<section class="site-map">
 				<div class="gallery">
+					<a href="./resources/pdfs/AmazingGrace_FullApplication.pdf" target="_blank">
+					<div class="sticky page-launcher">
+						<img src="./resources/images/page-launchers/download-app.jpg" alt=""/>
+							<div class="caption">
+							<h2>Join us August 18-23, 2019</h2>
+							<p>Download a camper application</p>
+							</div>
+					</div>
+					</a>
 					<a href="about.html">
 					<div class="page-launcher">
 						<img src="./resources/images/page-launchers/about.jpg" alt=""/>
