Fix mobile menu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 		<meta property="og:image" content="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" />
 		<meta property="og:image" content="./images/banner.png" />
 		<meta property="og:url" content="http://amazinggracecapecod.org/" />
-
+		
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
 		<link rel="icon" type="image/png" href="./resources/images/favicon.ico" />
 
 		<meta name="description" content="Amazing Grace Cape Cod. Is an all expenses paid summer experience for children whose parents are incarcerated.
@@ -27,7 +29,6 @@
 		<link rel="stylesheet" type="text/css" href="./resources/css/menu.css" />
    	 	<link rel="stylesheet" type="text/css" href="./resources/css/tablet.css" />
 		<link rel="stylesheet" type="text/css" href="./resources/css/mobile.css" />
-	
 
 		<script src="./resources/scripts/menu.js"></script>
 		
