--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 		<link rel="stylesheet" type="text/css" href="./resources/css/mobile.css" />
 
 		<script src="./resources/scripts/menu.js"></script>
-		
+		<script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
+    	<script src="./resources/scripts/loadsheet.js"></script>
+
+
 		<link href="https://fonts.googleapis.com/css?family=Oxygen:400,700&amp;subset=latin-ext" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Merriweather:400,700&amp;subset=latin-ext" rel="stylesheet">
 		<!-- 1. Link to jQuery (1.8 or later), -->
@@ -141,6 +144,9 @@
 					</form>
 				</div>
 				-->
+			<section class="page-content" id="gdoc-content">
+				<!-- Google doc content will be inserted here via javascript. -->
+			</section>
 			<section class="site-map">
 				<div class="gallery">
 					<a href="./resources/pdfs/AmazingGrace_FullApplication.pdf" target="_blank">
